--- a/src/forms/BookingStartDateAndTimeForm/BookingStartDateAndTimeForm.module.css
+++ b/src/forms/BookingStartDateAndTimeForm/BookingStartDateAndTimeForm.module.css
@@ -1,105 +1,110 @@
 @import '../../styles/propertySets.css';
 
 .root {
-  display: flex;
-  flex-direction: column;
+	display: flex;
+	flex-direction: column;
 }
 
-.timePickerContainer{
-  display: grid;
-  grid-template-columns: 1.5fr 1fr;
-  gap: 10px;
+.timePickerContainer {
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+  margin: 0 24px;
+
+	@media (--viewportMedium) {
+		display: grid;
+		grid-template-columns: 1.5fr 1fr;
+    margin: 0;
+	}
 }
 
-.startTimeSelect{
-
+.startTimeSelect {
 }
 
-.endTimeSelect{
-  
+.endTimeSelect {
 }
 
 .bookingDates {
-  flex-shrink: 0;
-  margin-bottom: 38px;
+	flex-shrink: 0;
+	margin-bottom: 38px;
 
-  /* Ensure that calendar dropdown gets some stacking context relative to other form items below */
-  z-index: 1;
+	/* Ensure that calendar dropdown gets some stacking context relative to other form items below */
+	z-index: 1;
 }
 
 .priceBreakdownContainer {
-  padding: 0 24px;
-  margin-bottom: 40px;
+	padding: 0 24px;
+	margin-bottom: 40px;
 
-  @media (--viewportMedium) {
-    padding: 0;
-    margin-bottom: 0;
-    margin-top: 1px;
-  }
+	@media (--viewportMedium) {
+		padding: 0;
+		margin-bottom: 0;
+		margin-top: 1px;
+	}
 }
 
 .priceBreakdownTitle {
-  /* Font */
-  color: var(--matterColorAnti);
+	/* Font */
+	color: var(--matterColorAnti);
 
-  margin-top: 5px;
-  margin-bottom: 14px;
-  @media (--viewportMedium) {
-    margin-top: 5px;
-    margin-bottom: 26px;
-  }
+	margin-top: 5px;
+	margin-bottom: 14px;
+	@media (--viewportMedium) {
+		margin-top: 5px;
+		margin-bottom: 26px;
+	}
 }
 
 .receipt {
-  flex-shrink: 0;
-  margin: 0 0 24px 0;
+	flex-shrink: 0;
+	margin: 0 0 24px 0;
 }
 
 .error {
-  color: var(--failColor);
-  margin: 0 24px;
-  display: inline-block;
+	color: var(--failColor);
+	margin: 0 24px;
+	display: inline-block;
 }
 
 .spinner {
-  margin: auto;
+	margin: auto;
 }
 
 .sideBarError {
-  @apply --marketplaceH4FontStyles;
-  color: var(--failColor);
-  margin: 0 24px 12px 24px;
+	@apply --marketplaceH4FontStyles;
+	color: var(--failColor);
+	margin: 0 24px 12px 24px;
 
-  @media (--viewportMedium) {
-    margin: 0 0 12px 0;
-  }
+	@media (--viewportMedium) {
+		margin: 0 0 12px 0;
+	}
 }
 
 .smallPrint {
-  @apply --marketplaceTinyFontStyles;
-  color: var(--matterColorAnti);
-  text-align: center;
-  margin: auto 24px 20px 24px;
-  flex-shrink: 0;
+	@apply --marketplaceTinyFontStyles;
+	color: var(--matterColorAnti);
+	text-align: center;
+	margin: auto 24px 20px 24px;
+	flex-shrink: 0;
 
-  @media (--viewportMedium) {
-    margin-top: auto;
-    margin-bottom: 20px;
-  }
+	@media (--viewportMedium) {
+		margin-top: auto;
+		margin-bottom: 20px;
+	}
 
-  @media (--viewportLarge) {
-    margin-top: 4px;
-    margin-bottom: 21px;
-  }
+	@media (--viewportLarge) {
+		margin-top: 4px;
+		margin-bottom: 21px;
+	}
 }
 
 .submitButtonWrapper {
-  flex-shrink: 0;
-  padding: 0 24px 24px 24px;
-  width: 100%;
+	flex-shrink: 0;
+	padding: 0 24px 24px 24px;
+	width: 100%;
 
-  @media (--viewportMedium) {
-    padding: 0;
-    width: 100%;
-  }
+	@media (--viewportMedium) {
+		padding: 0;
+		width: 100%;
+	}
 }
